--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,88 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  color: #3C8C91; }
+
+.heading-1 {
+  font-size: 2.8rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  letter-spacing: 1px; }
 
 .main {
   display: flex;
   height: 100vh;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  background-image: linear-gradient(to right top, #A5EBF0, #3C8C91); }
 
-form {
+.form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  border: 1px solid black;
-  padding: 2rem; }
+  height: 40rem;
+  gap: 2rem;
+  border-radius: 3px;
+  padding: 3rem 4rem;
+  background-color: #FAF9F6;
+  box-shadow: 0 2px 4px rgba(107, 117, 123, 0.5); }
+  .form--field {
+    display: flex;
+    flex-direction: column;
+    gap: .8rem;
+    position: relative;
+    margin: 1rem 0; }
+    .form--field input {
+      border: none;
+      background-color: transparent;
+      border-bottom: 1px solid #A5EBF0;
+      width: 100%;
+      padding: 4px 0;
+      position: relative;
+      z-index: 1; }
+      .form--field input:focus, .form--field input:valid {
+        outline: none;
+        box-shadow: 0 1px 3px rgba(107, 117, 123, 0.4);
+        background-color: #fff; }
+      .form--field input:invalid {
+        border-bottom: 1px solid #3C8C91; }
+      .form--field input:focus + label span {
+        transform: translateY(-3rem); }
+    .form--field label {
+      font-size: 1.4rem;
+      position: absolute;
+      z-index: 0;
+      top: .8rem; }
+      .form--field label span {
+        display: inline-block;
+        transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  .form--btn {
+    border: none;
+    display: inline-block;
+    text-transform: uppercase;
+    width: 100%;
+    padding: .8rem;
+    border-radius: 2px;
+    margin-top: auto;
+    color: #FAF9F6;
+    background-color: #3C8C91;
+    cursor: pointer;
+    font-size: 1.4rem; }
+    .form--btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 2px 4px rgba(107, 117, 123, 0.5); }
+    .form--btn:active {
+      transform: translateY(2px);
+      box-shadow: 0 1px 4px rgba(107, 117, 123, 0.5); }
 
 .register-container {
+  margin-top: auto;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  gap: .8rem; }
+  .register-container--link, .register-container--link:link, .register-container--link:visited {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: inherit;
+    border-bottom: 1px solid #3C8C91;
+    padding-bottom: .8px; }
