--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,10 @@
+$color-light: #A5EBF0;
+$color-dark:#3C8C91;
+$color-light-gray-1: #CED7DB;
+$color-dark-gray-1:#6B757B;
+$color-white: #FAF9F6;
+$color-white-1: #fff;
+
 *,
 *::before,
 *::after{
@@ -10,6 +17,15 @@
 html{
     box-sizing: border-box;
     font-size: 62.5%;
+    color: $color-dark;
+}
+
+.heading-1{
+    font-size: 2.8rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    letter-spacing: 1px;
+
 }
 
 .main{
@@ -17,18 +33,109 @@ html{
     height: 100vh;
     justify-content: center;
     align-items: center;
-    
+    background-image: linear-gradient(to right top,$color-light, $color-dark);
+
 }
 
-form{
+.form{
     display: flex;
-    flex-direction: column;
-    gap:1rem;
-    border: 1px solid black;
-    padding: 2rem;
+    flex-direction: column;    
+    height: 40rem;
+    gap:2rem;
+    border-radius: 3px;
+    padding: 3rem 4rem;
+    background-color: $color-white;
+    box-shadow: 0 2px 4px rgba($color: #6B757B, $alpha: .5);
+
+    &--field{
+        display: flex;
+        flex-direction: column;
+        gap: .8rem;
+        position: relative;
+        margin: 1rem 0;
+
+        input{
+            border: none;
+            background-color: transparent;
+            border-bottom: 1px solid $color-light;
+            width: 100%;
+            padding: 4px 0;
+            position: relative;
+            z-index: 1;
+
+            &:focus,
+            &:valid{
+                outline: none;
+                box-shadow: 0 1px 3px rgba($color: #6B757B, $alpha: .4);
+                background-color: $color-white-1;
+            }
+
+            &:invalid{
+                border-bottom: 1px solid $color-dark;
+            }
+
+            &:focus + label span{
+                transform: translateY(-3rem);
+            }
+        }
+
+
+        label{
+            font-size: 1.4rem;
+            position: absolute;
+            z-index: 0;
+            top: .8rem;
+
+            span{
+                display: inline-block;
+                transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            }            
+        }
+    }
+
+    &--btn{
+        border: none;
+        display: inline-block;
+        text-transform: uppercase;
+        width: 100%;
+        padding: .8rem;
+        border-radius: 2px;
+        margin-top: auto;
+        color: $color-white;
+        background-color: $color-dark;
+        cursor: pointer;
+        font-size: 1.4rem;
+    
+
+        &:hover{
+            transform: translateY(-2px);
+            box-shadow: 0 2px 4px rgba($color: #6B757B, $alpha: .5);
+        }
+
+        &:active{
+            transform: translateY(2px);
+            box-shadow: 0 1px 4px rgba($color: #6B757B, $alpha: .5);
+        }
+    }
 }
+
 
 .register-container{
+    margin-top: auto;
     display: flex;
     align-items: center;
+    gap: .8rem;
+
+    &--link{
+        &,
+        &:link,
+        &:visited{
+            text-decoration: none;
+            font-size: 1.4rem;
+            color:inherit;
+            border-bottom: 1px solid $color-dark;
+            padding-bottom: .8px;
+        }
+
+    }
 }
